--- a/autotesting/package.json
+++ b/autotesting/package.json
@@ -36,5 +36,8 @@
     "@wdio/selenium-standalone-service": "7.7.3",
     "@wdio/sync": "7.7.3",
     "expect": "27.0.2"
+  },
+  "dependencies": {
+    "@playwright/test": "^1.21.0"
   }
 }
